# physics-symmetry-discovery-jax

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
