[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symjax"
version = "0.1.0"
description = "Experiments on symmetry discovery and equivariant models for high energy physics."
authors = [
  { name = "Vaios Dionysopoulos" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "jax",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pre-commit",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "B"]  # basic errors + bugbear
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true